--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: jacksmion home
+description: jacksmion person home
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
